--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -19404,3 +19404,21 @@ html[dir="rtl"] [direction="rtl"][data-sidebar-style="compact"]:not([data-layout
       color: #fff; }
 
 /*# sourceMappingURL=style.css.map */
+
+.blog-card {
+  width: 100%;
+  background-color: white;
+  /* background-color: rgb(177, 172, 172); */
+}
+.blog-body {
+  transition: padding 0.5s;
+}
+
+.blog-card:hover {
+  box-shadow: 15px 20px 47px 10px rgb(0 0 0 / 4%), -15px 37px 55px 20px rgb(0 0 0 / 4%);
+}
+
+.blog-title {
+  font-size: 1rem;
+  font-weight: 500;
+}
